Fixed display of block calender - add link to display details in a modal dialog

--- a/calendar/register.conf
+++ b/calendar/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Calendar
 MODULE_DESCRIPTION: The calendar modules provides an interface that allows users to store personal and course events. It also allows users to point to a website for more information, as well as upload related documents.
 MODULE_AUTHORS: Tohir Solomons modified by david wafula
 MODULE_RELEASEDATE: 2005 02 22
-MODULE_VERSION: 1.525
+MODULE_VERSION: 1.530
 MODULE_PATH: calendar
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -16,6 +16,7 @@ MENU_CATEGORY: user
 
 UPDATE_DESCRIPTION: Added wrapper div and classes to the links that appear under the calendar wideblock
 UPDATE_DESCRIPTION: Added support for groups from unesco_oer
+UPDATE_DESCRIPTION: fixed display and added modal links
 
 SIDEMENU: context-2|site
 SIDEMENU: user-1|site
@@ -39,6 +40,10 @@ BLOCK: smallcalendar|site
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 ISCONTEXTPLUGIN: 1
+
+USES: word_time|Time|Time
+USES: word_title|Title|Title
+USES: word_details|Details|Details
 
 TEXT: mod_calendar_groupcalendar|Group calendar|Group calendar
 TEXT: help_calendar_about_title|Help Title Text|User Calendar Module
@@ -64,3 +69,7 @@ TEXT: mod_calendar_relatedwebsite|RelatedWebsite|Related Website
 TEXT: mod_calendar_fileupload|uploadFile | Upload File
 TEXT: mod_calendar_sidecal|Side calendar|Side calendar
 USES: mod_calendarbase_isthisamultidayevent|Is this a multiday event?|Is this a multiday event?
+
+TEXT: mod_calendar_eventsfound|Events found: [-number-]|Events found: [-number-]
+TEXT: mod_calendar_event|Event for: [-date-]|Event for: [-date-]
+TEXT: mod_calendar_events|Events for: [-date-]|Events for: [-date-]
