--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Switchboard
 MODULE_DESCRIPTION: A switchboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.015
+MODULE_VERSION: 0.016
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,7 @@ MENU_CATEGORY: Admin
 WIDEBLOCK: switchboardlinks
 BLOCK: switchboardabout
 
+UPDATE_DESCRIPTION: Chaged to use serialize class in utilities
 UPDATE_DESCRIPTION: Added sb_desc class
 UPDATE_DESCRIPTION: Removed explicit call to jquery version
 UPDATE_DESCRIPTION: resolved bug - Add icon does not appear after a save 
