Fixed schools "stealing" system text

--- a/schools/register.conf
+++ b/schools/register.conf
@@ -35,10 +35,10 @@ USES: word_save|Save|Save
 USES: word_cancel|Cancel|Cancel
 
 COMMENT: Common phrases
-PHRASE: phrase_emailaddress|Email address|Email address
-PHRASE: phrase_telephonenumber|Telephone number|Telephone number
-PHRASE: phrase_faxnumber|Fax number|Fax number
-PHRASE: phrase_mobilenumber|Mobile number|Mobile number
+USES: phrase_emailaddress|Email address|Email address
+USES: phrase_telephonenumber|Telephone number|Telephone number
+USES: phrase_faxnumber|Fax number|Fax number
+USES: phrase_mobilenumber|Mobile number|Mobile number
 
 COMMENT: Module specific text
 TEXT: mod_schools_schools|Schools|Schools
