Fixed text abstraction for context content

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.619
+MODULE_VERSION: 1.620
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -35,6 +35,7 @@ UPDATE_DESCRIPTION: added a bookmark button
 UPDATE_DESCRIPTION: NOTE that this update requires an update on scorm first. Multilingualized the add/edit scorm chapter/page templates
 UPDATE_DESCRIPTION: User can now be able to post a comment on the page
 UPDATE_DESCRIPTION: Users can now view courses which are listed as public without login
+UPDATE_DESCRIPTION: Fixed text abstractions
 
 CONFIG: ENABLE_VIEWACTIVITYLOGS|false|mod_contextcontent_viewuseractivitylogs
 CONFIG: ENABLE_ACTIVITYSTREAMER|true|mod_contextcontent_enableactivitystreamer
@@ -42,8 +43,8 @@ CONFIG: ENABLE_SCORM|true|mod_contextcontent_enable_scorm_desc
 CONFIG: CONTEXTCONTENT_ENABLECOMMENTS|true|mod_contextcontent_enable_comments
 CONFIG: CONTEXTCONTENT_ODD|blue|mod_contextcontent_oddcolor
 CONFIG: CONTEXTCONTENT_EVEN|grey|mod_contextcontent_evencolor
-CONFIG: CONTEXTCONTENT_EMAIL_ALERT_SUB|New content added to {course}|mod_contentcontent_newcontentaddedsubject
-CONFIG: CONTEXTCONTENT_EMAIL_ALERT_BDY|Dear {firstname} {lastname},<br/>Please note that new content has been published to your course {course}.<br/>To access this content please click on the link below or logon to your course.<br/><br/>{link}<br/><br/>{instructor}<br/>The Instructor|mod_contentcontent_newcontentaddedbody
+CONFIG: CONTEXTCONTENT_EMAIL_ALERT_SUB|New content added to [-context-]|mod_contentcontent_newcontentaddedsubject
+CONFIG: CONTEXTCONTENT_EMAIL_ALERT_BDY|Dear [-firstname-] [-lastname-],<br/>Please note that new content has been published to your [-context-].<br/>To access this content please click on the link below or logon to your [-context-].<br/><br/>[-link-]<br/><br/>[-author-]<br/>The Instructor|mod_contentcontent_newcontentaddedbody
 ISCONTEXTPLUGIN: 1
 
 TAGS: context|elearning
@@ -73,7 +74,7 @@ USES: mod_forum_searchfor|Search for|Search for
 
 TEXT: mod_contextcontent_useractivitylogs|Phrase Users Activities|Users Activities
 TEXT: mod_contextcontent_viewuseractivitylogs|Phrase View Users Activities in [-context-] Content|View Users Activities in [-context-] Content
-TEXT: mod_contextcontent_viewcontextcontentusage|Phrase Context Content Usage|[-context-] Usage
+TEXT: mod_contextcontent_viewcontextcontentusage|Phrase [-context-] Content Usage|[-context-] Usage
 TEXT: mod_contextcontent_enableactivitystreamer|Phrase Enable activity streamer|Enable acitivity streamer
 TEXT: mod_contentcontent_newcontentaddedsubject|email subject for new content alert|Email subject for new content alert
 TEXT: mod_contentcontent_newcontentaddedbody|email body for new content alert|Email body for new content alert
@@ -84,17 +85,17 @@ TEXT: mod_contextcontent_createpage|Phrase Create Page|Create page
 TEXT: mod_contextcontent_nextpage|Phrase Next Page|Next Page
 TEXT: mod_filemanager_selectfile|Phrase Select  file|Select  file
 TEXT: mod_contextcontent_downloadcsvlogs|Phrase Download CSV Logs|Download CSV Logs
-TEXT: mod_contextcontent_toolstitle|Text to show title of context tools|Context tools
+TEXT: mod_contextcontent_toolstitle|Text to show title of [-context-] tools|[-context-] tools
 TEXT: mod_contextcontent_enable_scorm_desc|Text to show if scorm is enabled|Enable/Disable scorm
 TEXT: mod_contextcontent_about_title|Title of the module|[-context-] Content
 TEXT: mod_contextcontent_about|Description of the module|A Simple CMS for [-contexts-]
-TEXT: mod_contextcontent_toolbarname|Toolbar name for this module|Course Content
+TEXT: mod_contextcontent_toolbarname|Toolbar name for this module|[-context-] Content
 TEXT: mod_contextcontent_addednewpage|has added a new page in|has added a new page in
 TEXT: mod_contextcontent_addednewchapter|has added a new chapter in|has added a new chapter in
 
 TEXT: mod_contextcontent_contextpagesfor|Content Pages for|Content Pages for
-TEXT: mod_contextcontent_nocontextpagesaddpage|No Content Pages Found for this Course|No Content Pages Found for this [-context-]. Please add a page
-TEXT: mod_contextcontent_nocontextpage|No Content Pages Found for this Course|No Content Pages Found for this [-context-].
+TEXT: mod_contextcontent_nocontextpagesaddpage|No Content Pages Found for this [-context-]|No Content Pages Found for this [-context-]. Please add a page
+TEXT: mod_contextcontent_nocontextpage|No Content Pages Found for this [-context-]|No Content Pages Found for this [-context-].
 TEXT: mod_contextcontent_addnewcontextpages|Add a New Page |Add a New Page
 TEXT: mod_contextcontent_addcontextpages|Add Page |Add Page
 TEXT: mod_contextcontent_editcontextpages|Edit Page |Edit Page
@@ -137,15 +138,15 @@ TEXT: mod_contextcontent_movechapterup|Move Chapter Up|Move Chapter Up
 
 TEXT: mod_contextcontent_movechapterdown|Move Chapter Down|Move Chapter Down
 
-TEXT: mod_contextcontent_nocontentincourse|No Content in Course|No Content in [-context-]
+TEXT: mod_contextcontent_nocontentincourse|No Content in [-context-]|No Content in [-context-]
 
-TEXT: mod_contextcontent_lecturershavenotuploadedcontent|The lecturers of this course have not uploaded any content pages.|The [-authors-] of this [-context-] have not uploaded any content pages.
+TEXT: mod_contextcontent_lecturershavenotuploadedcontent|The lecturers of this [-context-] have not uploaded any content pages.|The [-authors-] of this [-context-] have not uploaded any content pages.
 
 
-TEXT: mod_contextcontent_returntocoursehome|Return to course home page|Return to [-context-] home page
+TEXT: mod_contextcontent_returntocoursehome|Return to [-context-] home page|Return to [-context-] home page
 TEXT: mod_contextcontent_returntohomepage|Return to home page|Return to home page
 TEXT: mod_contextcontent_createachapter|Create a Chapter|Create a Chapter
-TEXT: mod_contextcontent_createchapterexplanation|There are currently no content or chapters for this course. Please start by creating a chapter.|There are currently no content or chapters for this course. Please start by creating a chapter.
+TEXT: mod_contextcontent_createchapterexplanation|There are currently no content or chapters for this [-context-]. Please start by creating a chapter.|There are currently no content or chapters for this [-context-]. Please start by creating a chapter.
 
 
 TEXT: mod_contextcontent_hidden|Phrase hidden|Hidden
@@ -205,10 +206,10 @@ TEXT: mod_contextcontent_removebookmark|Remove Bookmark|Remove Bookmark
 TEXT: mod_contextcontent_bookmarkpage|Bookmark Page|Bookmark Page
 
 TEXT: mod_contextcontent_pageoptions|Page Options|Page Options
-TEXT: mod_contextcontent_notloggedintoacontext|Notify user that they not logged into a context|You are not logged into a [-context-]
-TEXT: mod_contextcontent_pleaselogintocontext|Ask user to log into a context|Please log into a [-context-] to access that [-context-] content
+TEXT: mod_contextcontent_notloggedintoacontext|Notify user that they not logged into a [-context-]|You are not logged into a [-context-]
+TEXT: mod_contextcontent_pleaselogintocontext|Ask user to log into a [-context-]|Please log into a [-context-] to access that [-context-] content
 
-TEXT: mod_contextcontent_contexthasnochaptersorcontent|Notify user that context doesn't have any chapters or content|This [-context-] does not have chapters or content
+TEXT: mod_contextcontent_contexthasnochaptersorcontent|Notify user that [-context-] doesn't have any chapters or content|This [-context-] does not have chapters or content
 
 TEXT: mod_contextcontent_feedstext|Feeds|View Chapter Feeds
 
