Added group Developers

--- a/makemodule/register.conf
+++ b/makemodule/register.conf
@@ -19,6 +19,8 @@ WIDEBLOCK: makemodulemain
 BLOCK: aboutmakemodule
 BLOCK: linksmakemodule
 
+USE_GROUPS: Developers
+
 UPDATE_DESCRIPTION: Changed it to a 2 column layout
 UPDATE_DESCRIPTION: Added language terms and MODULE_STATUS to generated register.conf
 UPDATE_DESCRIPTION: Fixed it so it cannot be used by Administrative User
