--- a/schools/register.conf
+++ b/schools/register.conf
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schools
 MODULE_CATEGORY: schools
 
+TABLE: tbl_schools_countries
 TABLE: tbl_schools_provinces
 TABLE: tbl_schools_districts
 TABLE: tbl_schools_schools
@@ -18,10 +19,15 @@ TABLE: tbl_schools_contacts
 
 MENU_CATEGORY: Developer
 
+USE_GROUPS: Principals
+
 WIDEBLOCK: schoolsfind
 WIDEBLOCK: schoolsaddedit
 WIDEBLOCK: schoolsshow
 WIDEBLOCK: schoolscontacts
+WIDEBLOCK: schoolsprovinces
+WIDEBLOCK: schoolsdistricts
+WIDEBLOCK: schoolsprincipals
 BLOCK: schoolsleft
 
 COMMENT: Common words
@@ -33,12 +39,37 @@ USES: word_delete|Delete|Delete
 USES: word_address|Address|Address
 USES: word_save|Save|Save
 USES: word_cancel|Cancel|Cancel
+USES: word_search|Search|Search
+USES: word_title|The word title|Title
+USES: word_country|The word country|Country
+USES: word_gender|The word gender|Gender
+USES: word_username|The word username|Username
+USES: word_password|The word password|Password
+USES: word_male|The word male|Male
+USES: word_female|The word female|Female
+USES: word_title|The word title|Title
+
+COMMENT: Common titles
+USES: title_mr|title Mr|Mr
+USES: title_miss|title Miss|Miss
+USES: title_mrs|title Mrs|Mrs
+USES: title_ms|title Ms|Ms
+USES: title_dr|title dr|Dr
+USES: title_prof|title prof|Professor
+USES: title_rev|title rev|Rev
+USES: title_assocprof|title assocprof|Assoc Prof
 
 COMMENT: Common phrases
 USES: phrase_emailaddress|Email address|Email address
 USES: phrase_telephonenumber|Telephone number|Telephone number
 USES: phrase_faxnumber|Fax number|Fax number
 USES: phrase_mobilenumber|Mobile number|Mobile number
+USES: phrase_firstname|First name|First name
+USES: phrase_lastname|Last name|Last name
+USES: phrase_confirmpassword|Confirm password|Confirm password
+USES: phrase_selecttitle|Select title|Select title
+USES: phrase_selectcountry|Select country|Select country
+USES: phrase_adduser|Add user|Add user
 
 COMMENT: Module specific text
 TEXT: mod_schools_schools|Schools|Schools
@@ -51,16 +82,12 @@ TEXT: mod_schools_selectprovince|Select province ...|Select province ...
 TEXT: mod_schools_district|District|District
 TEXT: mod_schools_selectdistrict|Select district ...|Select district ...
 TEXT: mod_schools_nodistricts|No districts found for this province|No districts found for this province
-TEXT: mod_schools_principal|Principal|Principal
 TEXT: mod_schools_fullname|Full name|Full name
 TEXT: mod_schools_addcontact|Add contact|Add contact
 TEXT: mod_schools_editcontact|Edit contact|Edit contact
 TEXT: mod_schools_deletecontact|Delete contact|Delete contact
 TEXT: mod_schools_contacts|Contacts|Contacts
 TEXT: mod_schools_nocontacts|No contacts found for this school|No contacts found for this school
-TEXT: mod_schools_addprincipal|Add principal|Add principal
-TEXT: mod_schools_editprincipal|Edit principal|Edit principal
-TEXT: mod_schools_deleteprincipal|Delete principal|Delete principal
 TEXT: mod_schools_noprincipal|No principal found for this school|No principal found for this school
 TEXT: mod_schools_school|School|School
 TEXT: mod_schools_editschool|Edit school|Edit school
@@ -74,32 +101,27 @@ TEXT: mod_schools_deletedistrict|Delete district|Delete district
 TEXT: mod_schools_districtname|District name|District name
 TEXT: mod_schools_districts|Districts|Districts
 TEXT: mod_schools_manage|Manage schools components|Manage schools components
+TEXT: mod_schools_manageprovinces|Manage provinces|Manage provinces
+TEXT: mod_schools_addprovince|Add province|Add province
+TEXT: mod_schools_editprovince|Edit province|Edit province
+TEXT: mod_schools_deleteprovince|Delete province|Delete district
+TEXT: mod_schools_provincename|Province name|Province name
+TEXT: mod_schools_provinces|Provinces|Provinces
+TEXT: mod_schools_noprovinces|No provinces found|No provinces found
+TEXT: mod_schools_searchprincipal|Find user as principal|Find user as principal
+TEXT: mod_schools_addprincipaluser|Add user as principal|Add user as principal
+TEXT: mod_schools_addprincipal|Add principal|Add principal
+TEXT: mod_schools_deleteprincipal|Delete principal|Delete principal
+TEXT: mod_schools_usernameexists|The username you have entered already exists. Please enter a new one|The username you have entered already exists. Please enter a new one
+TEXT: mod_schools_invalidusername|The username can only contain letters and numbers. Please enter a new one|The username can only contain letters and numbers. Please enter a new one
+TEXT: mod_schools_passwordsnotalike|The passwords you have entered do not match|The passwords you have entered do not match
+TEXT: mod_schools_usernameshort|The username must be longer than 3 characters in length|The username must be longer than 3 characters in length
+TEXT: mod_schools_deleteconfirm|Are you sure you want to delete this item|Are you sure you want to delete this item
+TEXT: mod_schools_selectschool|Please select a school|Please select a school
+TEXT: mod_schools_selectprincipal|Please select a principal|Please select a principal
 
 COMMENT: Error text
 TEXT: mod_schools_error_1|No data error|[-fieldname-] can not be blank
 TEXT: mod_schools_error_2|No selection error|Please select a [-fieldname-]
 TEXT: mod_schools_contactnumbers|Contact numbers cannot be blank|Contact numbers cannot be blank
 TEXT: mod_schools_invalidemail|The email address is invalid|The email address is invalid
-
-
-
-
-
-
-
-TEXT: mod_schools_schoollist|List of schools|List of schools
-TEXT: mod_schools_deleteschooldetail|Delete school detail|Delete school detail
-TEXT: mod_schools_editschooldetail|Edit school detail|Edit school detail
-TEXT: mod_schools_contactperson|Contact person|Contact person
-TEXT: mod_schools_usernameexists|The username you have entered already exists. Please enter a new one|The username you have entered already exists. Please enter a new one
-TEXT: mod_schools_invalidusername|The username can only contain letters and numbers. Please enter a new one|The username can only contain letters and numbers. Please enter a new one
-TEXT: mod_schools_passwordsnotalike|The passwords you have entered do not match|The passwords you have entered do not match
-TEXT: mod_schools_usernameshort|The username must be longer than 3 characters in length|The username must be longer than 3 characters in length
-TEXT: mod_schools_deleteconfirm|Are you sure you want to delete this item|Are you sure you want to delete this item
-TEXT: mod_schools_manage|Manage schools components|Manage schools components
-TEXT: mod_schools_manageprincipals|Manage principals|Manage principals
-TEXT: mod_schools_manageschools|Manage schools|Manage schools
-TEXT: mod_schools_managecontacts|Manage contacts|Manage contacts
-
-
-
