Bug fixes for alert emails.

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.621
+MODULE_VERSION: 1.626
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -12,6 +12,7 @@ MODULE_STATUS: stable
 DEPENDS: context
 DEPENDS: filemanager
 
+UPDATE_DESCRIPTION: Bug fix and code rewrite for alert emails.
 UPDATE_DESCRIPTION: Bug fix for alert emails.
 UPDATE_DESCRIPTION: [jsc] First draft of content-export ability
 UPDATE_DESCRIPTION: Fixed bugs with email alerts sent when adding new content
@@ -44,8 +45,8 @@ CONFIG: ENABLE_SCORM|true|mod_contextcontent_enable_scorm_desc
 CONFIG: CONTEXTCONTENT_ENABLECOMMENTS|true|mod_contextcontent_enable_comments
 CONFIG: CONTEXTCONTENT_ODD|blue|mod_contextcontent_oddcolor
 CONFIG: CONTEXTCONTENT_EVEN|grey|mod_contextcontent_evencolor
-CONFIG: CONTEXTCONTENT_EMAIL_ALERT_SUB|New content added to [-context-]|mod_contentcontent_newcontentaddedsubject
-CONFIG: CONTEXTCONTENT_EMAIL_ALERT_BDY|Dear [-firstname-] [-lastname-],<br/>Please note that new content has been published to your [-context-].<br/>To access this content please click on the link below or logon to your [-context-].<br/><br/>[-link-]<br/><br/>[-author-]<br/>The Instructor|mod_contentcontent_newcontentaddedbody
+CONFIG: CONTEXTCONTENT_EMAIL_ALERT_SUB|New content added to your [-context-], [-course-]|mod_contentcontent_newcontentaddedsubject
+CONFIG: CONTEXTCONTENT_EMAIL_ALERT_BDY|Dear [-firstname-] [-lastname-],\n\nPlease note that new content has been published to your [-context-], [-course-]. To access this content please log in to your [-context-], [-course-].\n\n[-instructor-]|mod_contentcontent_newcontentaddedbody
 ISCONTEXTPLUGIN: 1
 
 TAGS: context|elearning
