Added update text.

--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.626
+MODULE_VERSION: 1.627
 MENU_CATEGORY: content
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
@@ -12,6 +12,7 @@ MODULE_STATUS: stable
 DEPENDS: context
 DEPENDS: filemanager
 
+UPDATE_DESCRIPTION: Bug fixes for alert emails.
 UPDATE_DESCRIPTION: Bug fix and code rewrite for alert emails.
 UPDATE_DESCRIPTION: Bug fix for alert emails.
 UPDATE_DESCRIPTION: [jsc] First draft of content-export ability
