changed private properties to public

--- a/tutorials/register.conf
+++ b/tutorials/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: beta
 MODULE_DESCRIPTION: This module provides for the lecturer to create and mark worksheets which are either interactive or standard. It also allows for late submissions and audit trails.
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: 2008 07 01
-MODULE_VERSION: 1.03
+MODULE_VERSION: 1.04
 MODULE_PATH: tutorials
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -28,6 +28,8 @@ TABLE: tbl_tutorials_answers
 TABLE: tbl_tutorials_results
 TABLE: tbl_tutorials_marking
 TABLE: tbl_tutorials_marker
+
+UPDATE_DESCRIPTION: Changed private properties to public
 
 COMMENT: Lecturer home
 TEXT: mod_tutorials_administration|Interactive tutorials administration for [-coursename-]|Interactive tutorials administration for [-coursename-]
