--- a/schools/register.conf
+++ b/schools/register.conf
@@ -48,6 +48,7 @@ USES: word_password|The word password|Password
 USES: word_male|The word male|Male
 USES: word_female|The word female|Female
 USES: word_title|The word title|Title
+USES: word_field|Field|Field
 
 COMMENT: Common titles
 USES: title_mr|title Mr|Mr
@@ -101,6 +102,7 @@ TEXT: mod_schools_deletedistrict|Delete district|Delete district
 TEXT: mod_schools_districtname|District name|District name
 TEXT: mod_schools_districts|Districts|Districts
 TEXT: mod_schools_manage|Manage schools components|Manage schools components
+TEXT: mod_schools_manageschools|Manage schools|Manage schools
 TEXT: mod_schools_manageprovinces|Manage provinces|Manage provinces
 TEXT: mod_schools_addprovince|Add province|Add province
 TEXT: mod_schools_editprovince|Edit province|Edit province
@@ -119,6 +121,8 @@ TEXT: mod_schools_usernameshort|The username must be longer than 3 characters in
 TEXT: mod_schools_deleteconfirm|Are you sure you want to delete this item|Are you sure you want to delete this item
 TEXT: mod_schools_selectschool|Please select a school|Please select a school
 TEXT: mod_schools_selectprincipal|Please select a principal|Please select a principal
+TEXT: mod_schools_principal|Principal|Principal
+TEXT: mod_schools_manageprincipals|Manage principals|Manage principals
 
 COMMENT: Error text
 TEXT: mod_schools_error_1|No data error|[-fieldname-] can not be blank
