--- a/schools/register.conf
+++ b/schools/register.conf
@@ -1,5 +1,5 @@
 MODULE_ID: schools
-MODULE_NAME: schools
+MODULE_NAME: [-organisations-]
 MODULE_DESCRIPTION: Simple facility to store school basic data
 MODULE_AUTHORS: Kevin Cyster
 MODULE_RELEASEDATE: March 10, 2012, 3:20 pm
@@ -73,11 +73,11 @@ USES: phrase_selectcountry|Select country|Select country
 USES: phrase_adduser|Add user|Add user
 
 COMMENT: Module specific text
-TEXT: mod_schools_schools|Schools|Schools
-TEXT: mod_schools_schoolname|School name|School name
-TEXT: mod_schools_addschool|Add school|Add school
-TEXT: mod_schools_findschool|Find school|Find school
-TEXT: mod_schools_noschools|No schools found|No schools found
+TEXT: mod_schools_schools|[-organisations-]|[-organisations-]
+TEXT: mod_schools_schoolname|[-organisation-] name|[-organisation-] name
+TEXT: mod_schools_addschool|Add [-organisation-]|Add [-organisation-]
+TEXT: mod_schools_findschool|Find [-organisation-]|Find [-organisation-]
+TEXT: mod_schools_noschools|No [-organisations-] found|No [-organisations-] found
 TEXT: mod_schools_province|Province|Province
 TEXT: mod_schools_selectprovince|Select province ...|Select province ...
 TEXT: mod_schools_district|District|District
@@ -88,12 +88,12 @@ TEXT: mod_schools_addcontact|Add contact|Add contact
 TEXT: mod_schools_editcontact|Edit contact|Edit contact
 TEXT: mod_schools_deletecontact|Delete contact|Delete contact
 TEXT: mod_schools_contacts|Contacts|Contacts
-TEXT: mod_schools_nocontacts|No contacts found for this school|No contacts found for this school
-TEXT: mod_schools_noprincipal|No principal found for this school|No principal found for this school
-TEXT: mod_schools_school|School|School
-TEXT: mod_schools_editschool|Edit school|Edit school
-TEXT: mod_schools_deleteschool|Delete school|Delete school
-TEXT: mod_schools_schooldetails|School details|School details
+TEXT: mod_schools_nocontacts|No contacts found for this [-organisation-]|No contacts found for this [-organisation-]
+TEXT: mod_schools_noprincipal|No principal found for this [-organisation-]|No principal found for this [-organisation-]
+TEXT: mod_schools_school|[-organisation-]|[-organisation-]
+TEXT: mod_schools_editschool|Edit [-organisation-]|Edit [-organisation-]
+TEXT: mod_schools_deleteschool|Delete [-organisation-]|Delete [-organisation-]
+TEXT: mod_schools_schooldetails|[-organisation-] details|[-organisation-] details
 TEXT: mod_schools_position|Position|Position
 TEXT: mod_schools_managedistricts|Manage districts|Manage districts
 TEXT: mod_schools_adddistrict|Add district|Add district
@@ -101,8 +101,8 @@ TEXT: mod_schools_editdistrict|Edit district|Edit district
 TEXT: mod_schools_deletedistrict|Delete district|Delete district
 TEXT: mod_schools_districtname|District name|District name
 TEXT: mod_schools_districts|Districts|Districts
-TEXT: mod_schools_manage|Manage schools components|Manage schools components
-TEXT: mod_schools_manageschools|Manage schools|Manage schools
+TEXT: mod_schools_manage|Manage [-organisations-] components|Manage [-organisations-] components
+TEXT: mod_schools_manageschools|Manage [-organisations-]|Manage [-organisations-]
 TEXT: mod_schools_manageprovinces|Manage provinces|Manage provinces
 TEXT: mod_schools_addprovince|Add province|Add province
 TEXT: mod_schools_editprovince|Edit province|Edit province
@@ -119,7 +119,7 @@ TEXT: mod_schools_invalidusername|The username can only contain letters and numb
 TEXT: mod_schools_passwordsnotalike|The passwords you have entered do not match|The passwords you have entered do not match
 TEXT: mod_schools_usernameshort|The username must be longer than 3 characters in length|The username must be longer than 3 characters in length
 TEXT: mod_schools_deleteconfirm|Are you sure you want to delete this item|Are you sure you want to delete this item
-TEXT: mod_schools_selectschool|Please select a school|Please select a school
+TEXT: mod_schools_selectschool|Please select a [-organisation-]|Please select a [-organisation-]
 TEXT: mod_schools_selectprincipal|Please select a principal|Please select a principal
 TEXT: mod_schools_principal|Principal|Principal
 TEXT: mod_schools_manageprincipals|Manage principals|Manage principals
