--- a/oembed/register.conf
+++ b/oembed/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Oembed
 MODULE_DESCRIPTION: Implementation of the oEmbed specification.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2010 01 01
-MODULE_VERSION: 0.082
+MODULE_VERSION: 0.083
 MODULE_PATH: oembed
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -16,6 +16,7 @@ TAGS: mashup|filters
 
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: Fixed error with newer jQuery
 UPDATE_DESCRIPTION: Removed oembed from the menu, marked it stable (consumption only)
 UPDATE_DESCRIPTION: Removed explicit jQuery verison from oembed class
 UPDATE_DESCRIPTION: Fixed OEMBED not working for auto
