Added success message on username check

--- a/schools/register.conf
+++ b/schools/register.conf
@@ -49,6 +49,7 @@ USES: word_male|The word male|Male
 USES: word_female|The word female|Female
 USES: word_title|The word title|Title
 USES: word_field|Field|Field
+USES: word_success|Success|Success
 
 COMMENT: Common titles
 USES: title_mr|title Mr|Mr
@@ -123,6 +124,7 @@ TEXT: mod_schools_selectschool|Please select a [-organisation-]|Please select a 
 TEXT: mod_schools_selectprincipal|Please select a principal|Please select a principal
 TEXT: mod_schools_principal|Principal|Principal
 TEXT: mod_schools_manageprincipals|Manage principals|Manage principals
+TEXT: mod_schools_usernameavailable|The username you have entered is available|The username you have entered is available
 
 COMMENT: Error text
 TEXT: mod_schools_error_1|No data error|[-fieldname-] can not be blank
