Created new module for registering school users

--- a/schoolregisterusers/register.conf
+++ b/schoolregisterusers/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: schoolregisterusers
 MODULE_NAME: Register school users
-MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
+MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required for managing schools on the system. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Derek Keats, Paul Mungai
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.004
 MODULE_PATH: schoolregisterusers
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,7 +13,7 @@ MODULE_CATEGORY: schoolregisterusers
 MENU_CATEGORY: Admin
 MODULE_STATUS: Alpha
 
-COMMENT: Based on the schoolregisterusers module
+COMMENT: Based on the oeruserdata module
 
 COMMENT: -------- DATA--------
 TABLE: tbl_schoolregisterusers_userextra
@@ -65,6 +65,8 @@ USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
+USES: phrase_middlenames|Middle name(s)|Middle name(s)
+USES: word_school|School|School
 
 COMMENT - SERIALIZE doesn't work with USES, need to check that & fix
 TEXT: mod_schoolregisterusers_requiredfield|Required|Required
