Added linking of components in grades

--- a/grades/register.conf
+++ b/grades/register.conf
@@ -31,25 +31,24 @@ USE GROUPS: Educators
 
 WIDEBLOCK: gradesmain
 WIDEBLOCK: gradeslist
-WIDEBLOCK: gradesaddoredit
+WIDEBLOCK: gradesform
+WIDEBLOCK: gradesmanage
+WIDEBLOCK: gradeslink
 BLOCK: gradesleft
-BLOCK: entergrade|user
-BLOCK: entergrade|postlogin
-BLOCK: entersubject|user
-BLOCK: entersubject|postlogin
-BLOCK: enterclass|user
-BLOCK: enterclass|postlogin
+COMMENT: BLOCK: entergrade|user
+COMMENT: BLOCK: entergrade|postlogin
 
 COMMENT: Common words
 USES: word_add|The word add|Add
 USES: word_edit|The word edit|Edit
 USES: word_delete|The word delete|Delete
-USES: word_select|The word select|Select
 USES: word_save|The word save|Save
 USES: word_cancel|The word cancel|Cancel
 USES: word_error|The word error|Error
 USES: word_field|The word field|Field
-USES: word_description|The word description|Description
+USES: word_link|The word link|Link
+USES: word_context|The word [-context-]|[-context-]
+USES: word_name|Name|Name
 
 COMMENT: Common phrases
 
@@ -58,14 +57,17 @@ TEXT: mod_grades_description|Grades description|This is the area where you manag
 TEXT: mod_grades_managecomponents|Manage components|Manage components
 TEXT: mod_grades_mainpage|Main page|Main page
 TEXT: mod_grades_deleteconfirm|Are you sure you want to delete this [-item-]|Are you sure you want to delete this [-item-]
+TEXT: mod_grades_nolinks|No links found|No links found
+TEXT: mod_grades_deletelink|Delete link|Delete link
 
 COMMENT: Abstracted Text
-TEXT: mod_grades_linktoschool|Link to [-organisation-]|Link to [-organisation-]
-TEXT: mod_grades_linktograde|Link to [-level-]|Link to [-level-]
-TEXT: mod_grades_linktosubject|Link to [-subject-]|Link to [-subject-]
-TEXT: mod_grades_linktoclass|Link to [-grouping-]|Link to [-grouping-]
-TEXT: mod_grades_linktocontext|Link to [-context-]|Link to [-context-]
+TEXT: mod_grades_nocontexts|No [-contexts-] found|No [-contexts-] found
+TEXT: mod_grades_linkedcontexts|Linked [-contexts-]|Linked [-contexts-]
+TEXT: mod_grades_linktocontext|Add link to [-context-]|Add link to [-context-]
+TEXT: mod_grades_selectcontext|Select [-context-] ...|Select [-context-] ...
 TEXT: mod_grades_addcontext|Add [-context-]|Add [-context-]
+TEXT: mod_grades_linktoschool|Add link to [-organisation-]|Add link to [-organisation-]
+TEXT: mod_grades_selectschool|Select [-organisation-] ...|Select [-organisation-] ...
 
 TEXT: mod_grades_managegrades|Manage [-levels-]|Manage [-levels-]
 TEXT: mod_grades_grade|[-level-]|[-level-]
@@ -78,6 +80,10 @@ TEXT: mod_grades_entergrade|Enter [-level-]|Enter [-level-]
 TEXT: mod_grades_leavegrade|Leave [-level-]|Leave [-level-]
 TEXT: mod_grades_gradeslist|[-level-] list|[-level-] list
 TEXT: mod_grades_nogrades|No [-levels-] found|No [-levels-] found
+TEXT: mod_grades_linkgrade|Link [-level-]|Link [-level-]
+TEXT: mod_grades_selectgrade|Select [-level-] ...|Select [-level-] ...
+TEXT: mod_grades_linktograde|Add link to [-level-]|Add link to [-level-]
+TEXT: mod_grades_linkedgrades|Linked [-levels-]|Linked [-levels-]
 
 TEXT: mod_grades_managesubjects|Manage [-subjects-]|Manage [-subjects-]
 TEXT: mod_grades_subject|[-subject-]|[-subject-]
@@ -90,7 +96,11 @@ TEXT: mod_grades_entersubject|Enter [-subject-]|Enter [-subject-]
 TEXT: mod_grades_leavesubject|Leave [-subject-]|Leave [-subject-]
 TEXT: mod_grades_subjectslist|[-subject-] list|[-subject-] list
 TEXT: mod_grades_nosubjects|No [-subjects-] found|No [-subjects-] found
-
+TEXT: mod_grades_linksubject|Link [-subject-]|Link [-subject-]
+TEXT: mod_grades_selectsubject|Select [-subject-] ...|Select [-subject-] ...
+TEXT: mod_grades_linktosubject|Add link to [-subject-]|Add link to [-subject-]
+TEXT: mod_grades_linkedsubjects|Linked [-subjects-]|Linked [-subjects-]
+ 
 TEXT: mod_grades_manageclasses|Manage [-groupings-]|Manage [-groupings-]
 TEXT: mod_grades_class|[-grouping-]|[-grouping-]
 TEXT: mod_grades_classes|[-groupings-]|[-groupings-]
@@ -102,3 +112,16 @@ TEXT: mod_grades_enterclass|Enter [-grouping-]|Enter [-grouping-]
 TEXT: mod_grades_leaveclass|Leave [-grouping-]|Leave [-grouping-]
 TEXT: mod_grades_classeslist|[-grouping-] list|[-grouping-] list
 TEXT: mod_grades_noclasses|No [-groupings-] found|No [-groupings-] found
+TEXT: mod_grades_linkclass|Link [-grouping-]|Link [-grouping-]
+TEXT: mod_grades_selectclass|Select [-grouping-] ...|Select [-grouping-] ...
+TEXT: mod_grades_linktoclass|Add link to [-grouping-]|Add link to [-grouping-]
+TEXT: mod_grades_linkedclasses|Linked [-groupings-]|Linked [-groupings-]
+
+COMMENT: Error text
+TEXT: mod_grades_errorgrade|Please select a [-level-]|Please select a [-level-]
+TEXT: mod_grades_errorsubject|Please select a [-subject-]|Please select a [-subject-]
+TEXT: mod_grades_errorclass|Please select a [-grouping-]|Please select a [-grouping-]
+TEXT: mod_grades_errorcontext|Please select a [-context-]|Please select a [-context-]
+TEXT: mod_grades_errorschool|Please select a [-organisation-]|Please select a [-organisation-]
+
+
