Added additional linking and enter course block

--- a/grades/register.conf
+++ b/grades/register.conf
@@ -11,19 +11,11 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: grades
 MODULE_CATEGORY: grades
 
-COMMENT: MAin tables
+COMMENT: Main tables
 TABLE: tbl_grades_grades
 TABLE: tbl_grades_subjects
 TABLE: tbl_grades_classes
-
-COMMENT: Bridging tables
-TABLE: tbl_grades_schoolgrade
-TABLE: tbl_grades_gradesubject
-TABLE: tbl_grades_gradeclass
-TABLE: tbl_grades_subjectclass
-TABLE: tbl_grades_subjectcontext
-TABLE: tbl_grades_schoolclass
-TABLE: tbl_grades_classusers
+TABLE: tbl_grades_bridging
 
 MENU_CATEGORY: Developer
 
@@ -35,8 +27,8 @@ WIDEBLOCK: gradesform
 WIDEBLOCK: gradesmanage
 WIDEBLOCK: gradeslink
 BLOCK: gradesleft
-COMMENT: BLOCK: entergrade|user
-COMMENT: BLOCK: entergrade|postlogin
+BLOCK: entergrade|user
+BLOCK: entergrade|postlogin
 
 COMMENT: Common words
 USES: word_add|The word add|Add
@@ -49,6 +41,8 @@ USES: word_field|The word field|Field
 USES: word_link|The word link|Link
 USES: word_context|The word [-context-]|[-context-]
 USES: word_name|Name|Name
+USES: mod_schools_organisation|[-organisation-]|[-organisation-]
+USES: word_enter|The word enter|Enter
 
 COMMENT: Common phrases
 
@@ -66,8 +60,11 @@ TEXT: mod_grades_linkedcontexts|Linked [-contexts-]|Linked [-contexts-]
 TEXT: mod_grades_linktocontext|Add link to [-context-]|Add link to [-context-]
 TEXT: mod_grades_selectcontext|Select [-context-] ...|Select [-context-] ...
 TEXT: mod_grades_addcontext|Add [-context-]|Add [-context-]
+TEXT: mod_grades_noschools|No [-organisations-] found|No [-organisations-] found
+TEXT: mod_grades_linkedschools|Linked [-organisations-]|Linked [-organisations-]
 TEXT: mod_grades_linktoschool|Add link to [-organisation-]|Add link to [-organisation-]
 TEXT: mod_grades_selectschool|Select [-organisation-] ...|Select [-organisation-] ...
+TEXT: mod_grades_addschool|Add [-organisation-]|Add [-organisation-]
 
 TEXT: mod_grades_managegrades|Manage [-levels-]|Manage [-levels-]
 TEXT: mod_grades_grade|[-level-]|[-level-]
