--- a/grades/register.conf
+++ b/grades/register.conf
@@ -19,7 +19,7 @@ TABLE: tbl_grades_bridging
 
 MENU_CATEGORY: Developer
 
-USE GROUPS: Educators
+USE GROUPS: School Managers
 
 WIDEBLOCK: gradesmain
 WIDEBLOCK: gradeslist
@@ -120,5 +120,7 @@ TEXT: mod_grades_errorsubject|Please select a [-subject-]|Please select a [-subj
 TEXT: mod_grades_errorclass|Please select a [-grouping-]|Please select a [-grouping-]
 TEXT: mod_grades_errorcontext|Please select a [-context-]|Please select a [-context-]
 TEXT: mod_grades_errorschool|Please select a [-organisation-]|Please select a [-organisation-]
+TEXT: mod_grades_invalidaction|Invalid action|Invalid action
+TEXT: mod_grades_actionerror|Action error|You have performed an invalid action or you have tried an action you are not authorised to perform
 
 
