--- a/schools/register.conf
+++ b/schools/register.conf
@@ -19,6 +19,7 @@ TABLE: tbl_schools_contacts
 MENU_CATEGORY: Developer
 
 USE_GROUPS: Principals
+USE GROUPS: School Managers
 
 WIDEBLOCK: schoolsfind
 WIDEBLOCK: schoolsaddedit
@@ -130,3 +131,5 @@ TEXT: mod_schools_error_1|No data error|[-fieldname-] can not be blank
 TEXT: mod_schools_error_2|No selection error|Please select a [-fieldname-]
 TEXT: mod_schools_contactnumbers|Contact numbers cannot be blank|Contact numbers cannot be blank
 TEXT: mod_schools_invalidemail|The email address is invalid|The email address is invalid
+TEXT: mod_schools_invalidaction|Invalid action|Invalid action
+TEXT: mod_schools_actionerror|Action error|You have performed an invalid action or you have tried an action you are not authorised to perform
