Added permissions Added pagination Added self registration Added captcha

--- a/schoolusers/register.conf
+++ b/schoolusers/register.conf
@@ -11,6 +11,8 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: schoolusers
 MODULE_CATEGORY: schoolusers
 
+USE GROUPS: School Managers
+
 TABLE: tbl_schoolusers_data
 
 MENU_CATEGORY: Developer
@@ -81,4 +83,11 @@ TEXT: mod_schoolusers_usernameavailable|The username you have entered is availab
 TEXT: mod_schoolusers_error_1|No data error|[-fieldname-] can not be blank
 TEXT: mod_schoolusers_error_2|No selection error|Please select a [-fieldname-]
 TEXT: mod_schoolusers_invalidemail|The email address is invalid|The email address is invalid
-
+TEXT: mod_schoolusers_register|Register yourself|Register yourself
+TEXT: mod_schoolusers_success|Your registration was successful. Please log on to continue using the system.|Your registration was successful. Please log on to continue using the system.
+TEXT: mod_schoolusers_registrationsuccess|Registration success|Registration success
+TEXT: mod_schoolusers_redraw|Redraw|Redraw
+TEXT: mod_schoolusers_verify|Verify|Verify Image - To prevent abuse, please enter the code as shown below. If you are unable to view the code, click on "Redraw" for a new one.
+TEXT: mod_schoolusers_imageincorrect|The image code you entered was incorrect|The image code you entered was incorrect
+TEXT: mod_schoolusers_invalidaction|Invalid action|Invalid action
+TEXT: mod_schoolusers_actionerror|Action error|You have performed an invalid action or you have tried an action you are not authorised to perform
