Removed Ohlloh block, minor code fixes

--- a/blockalicious/register.conf
+++ b/blockalicious/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Blockalicious
 MODULE_DESCRIPTION: Provides a means to create blocks that can be added to the CMS without requiring them to be in a separate module. Blockalicious provides no end user functionality, except where it allows the content of blocks to be managed.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2007 01 13
-MODULE_VERSION: 2.04
+MODULE_VERSION: 2.041
 MODULE_PATH: blockalicious
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -18,7 +18,6 @@ BLOCK: cmsrss
 BLOCK: commlinks
 BLOCK: openlearnsearch
 BLOCK: paypal
-BLOCK: ohloh
 BLOCK: spacer
 BLOCK: spacer2
 BLOCK: spacer3
@@ -27,6 +26,7 @@ BLOCK: spacer4
 TAGS: blocks|content management|cms
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: Removed Ohlloh block, minor code fixes
 UPDATE_DESCRIPTION: Exposed cmslatest and cmsrss to external blocks
 UPDATE_DESCRIPTION: Added check for CMS being installed
 
