Working towards an interface for adding more blank slates

--- a/slate/register.conf
+++ b/slate/register.conf
@@ -11,11 +11,14 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: slate
 MODULE_CATEGORY: slate
 MODULE_STATUS: stable
+
 TABLE: tbl_slate_pageblocks
 TABLE: tbl_slate_pages
 
 MENU_CATEGORY: admin
 PAGE: admin_site
+
+WIDEBLOCK: slatepages
 
 TEXT: mod_slate_heading_edit|Edit an existing slate|Edit an existing slate
 TEXT: mod_slate_heading_new|Add a new slate|Add a new slate
