Changed it so annotation only happens in <p> tags, to avoid annotating the edit  links and such things

--- a/pagenotes/register.conf
+++ b/pagenotes/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: Page notes
 MODULE_DESCRIPTION: Take notes on any page within a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 23, 2012, 12:06 pm
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: pagenotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: pagenotes
 MODULE_CATEGORY: pagenotes
+MODULE_STATUS: beta
 
 TABLE: tbl_pagenotes_notes
 TABLE: tbl_pagenotes_annotations
@@ -17,13 +18,14 @@ TABLE: tbl_pagenotes_annotations
 COMMENT: Credit to Koos van der Kolk (koosvdkolk [at] gmail.com) for
 COMMENT: the jquery library that made this module possible.
 
+UPDATE_DESCRIPTION: Made the annotation apply only to category
 
 MENU_CATEGORY: Developer
 WIDEBLOCK: pagenotesmiddle
 WIDEBLOCK: pagenoteswidebl
 BLOCK: annotatecontrol
 BLOCK: pagenotecontrol
-BLOCK: pagenotesright
+
 
 
 TEXT: mod_pagenotes_saveann|Save annotations|Save annotations
