Changed to stable and fixed hard codes word 'course'

--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: announcements
 MODULE_NAME: Announcements
-MODULE_DESCRIPTION:This plugin enables [-authors-] to post announcements which can be viewed by all the [-READONLYS-] enrolled in a course.
+MODULE_DESCRIPTION:This plugin enables [-authors-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.365
+MODULE_VERSION: 0.366
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,9 +18,10 @@ DEPENDS:mail
 DEPENDS:context
 DEPENDS:utilities
 
-MODULE_STATUS: Beta
+MODULE_STATUS: stable
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [DWK] Changed to stable and fixed hard codes word 'course'
 UPDATE_DESCRIPTION: Changed language element
 UPDATE_DESCRIPTION: Added language element
 UPDATE_DESCRIPTION: RE-Formated the announcement emails
