--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: announcements
 MODULE_NAME: Announcements
-MODULE_DESCRIPTION:This plugin enables [-authors-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
+MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.366
+MODULE_VERSION: 0.367
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
