Marked it deprecated, Apture no longer exists.

--- a/apture/register.conf
+++ b/apture/register.conf
@@ -10,7 +10,15 @@ MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
 MODULE_LANGTERMS: apture
 MODULE_CATEGORY: Web2.0
-MODULE_STATUS: alpha
+
+
+
+
+MODULE_STATUS: deprecated
+COMMENT: Apture is closed, the team has been acquired by Google.
+
+
+
 UPDATE_DESCRIPTION: Module created July 9, 2009
 SIDEMENU: user-2
 SIDEMENU: elearnpostlogin-2
