--- a/buckets/register.conf
+++ b/buckets/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Bucket explorer
 MODULE_DESCRIPTION: Bucket explorer Module for Amazon S3. Use it to manage files on Amazon S3 account, which uses the concept of buckets to store files.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 01 08
-MODULE_VERSION: 0.01
+MODULE_VERSION: 0.02
 MODULE_PATH: buckets
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,7 +14,7 @@ MODULE_CATEGORY: buckets
 MENU_CATEGORY: developer
 
 TAGS: developer
-MODULE_STATUS: pre-alpha
+MODULE_STATUS: deprecated
 
 TEXT: mod_buckets_title|Title for buckets module|Bucket explorer for Amazon S3
 TEXT: mod_buckets_about|About text for buckets module|Bucket explorer Module for Amazon S3. Use it to manage files on Amazon S3 account, which uses the concept of buckets to store files.
