Added blocks to show users on, and last five users, added controller and methods to return data for Ajax, added script to resources

--- a/blockalicious/register.conf
+++ b/blockalicious/register.conf
@@ -1,15 +1,27 @@
 MODULE_ID: blockalicious
 MODULE_NAME: Blockalicious
-MODULE_DESCRIPTION: Provides a means to create blocks that can be added to the CMS without requiring them to be in a separate module. Blockalicious provides no end user functionality, except where it allows the content of blocks to be managed.
+MODULE_DESCRIPTION: Provides a means to create blocks that can be added to the site without requiring them to be in a separate module. Blockalicious provides no end user functionality, except where it allows the content of blocks to be managed.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2007 01 13
-MODULE_VERSION: 2.041
+MODULE_VERSION: 2.049
 MODULE_PATH: blockalicious
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: blockalicious
 MODULE_CATEGORY: blockalicious
+
+UPDATE_DESCRIPTION: [DWK]Added blocks to show users on, and last five users, added controller and methods to return data for Ajax, added script to resources
+UPDATE_DESCRIPTION: [DWK]Removed Ohlloh block, minor code fixes
+UPDATE_DESCRIPTION: Exposed cmslatest and cmsrss to external blocks
+UPDATE_DESCRIPTION: Added check for CMS being installed
+
+BLOCK: usersonnow
+TEXT: mod_blockalicious_usersontitle|Title for the number of users online block|Users online
+TEXT: mod_blockalicious_userson|Users currently logged in|Users currently logged in
+
+BLOCK: userslastfive
+TEXT: mod_blockalicious_ulftitle|Title for block showing last five users|Latest users
 
 BLOCK: brightkite
 BLOCK: cmsnews
@@ -25,10 +37,6 @@ BLOCK: spacer4
 
 TAGS: blocks|content management|cms
 MODULE_STATUS: stable
-
-UPDATE_DESCRIPTION: Removed Ohlloh block, minor code fixes
-UPDATE_DESCRIPTION: Exposed cmslatest and cmsrss to external blocks
-UPDATE_DESCRIPTION: Added check for CMS being installed
 
 CONFIG: PAYPAL_BUSINESS|CHISIMBA@CHISIMBA.COM|mod_blockalicious_business
 CONFIG: PAYPAL_ITEM_NAME|CHISIMBA|mod_blockalicious_item_name
@@ -58,5 +66,6 @@ TEXT: mod_blockalicious_errornofeed|Explains that the feed module needs to be in
 TEXT: mod_blockalicious_errornobkid|Explains that the brightkie_id needs to be stored|This functionality requires you to register brightkite_id as a user parameter. You do not have a BrightKite ID stored on this system. This problem may also arise when the BrightKite block is used on a module that prevents the correct owner from being guessed by the system.
 
 USES: word_go|The word Go|Go
+
 
 
