Moved it to the Resources menu as it was the only thing on Communication

--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.367
+MODULE_VERSION: 0.369
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: announcements
-MENU_CATEGORY: communications
+MENU_CATEGORY: resources
 CONTEXT_AWARE: 1
 ISCONTEXTPLUGIN:1
 DEPENDS_CONTEXT: 0
@@ -21,6 +21,7 @@ DEPENDS:utilities
 MODULE_STATUS: stable
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [DWK] Moved it to the Resources menu as it was the only thing on Communication
 UPDATE_DESCRIPTION: [DWK] Changed to stable and fixed hard codes word 'course'
 UPDATE_DESCRIPTION: Changed language element
 UPDATE_DESCRIPTION: Added language element
