[pwando] - Refactoring gradebook and related assessment modules. Fixed upload offline assignments for all

--- a/gradebook/register.conf
+++ b/gradebook/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: gradebook
 MODULE_NAME: Grade Book
 MODULE_DESCRIPTION: Centralized grades repository
-MODULE_AUTHORS: Otim Samuel, Abdurahim Shariff (Ported to Chisimba)
+MODULE_AUTHORS: Otim Samuel, Abdurahim Shariff (Ported to Chisimba), Paul Mungai
 MODULE_RELEASEDATE: 2005 06 13
-MODULE_VERSION: 1.43
+MODULE_VERSION: 1.441
 MODULE_PATH: gradebook
 MODULE_STATUS: beta
 MODULE_ISADMIN: 0
@@ -44,6 +44,7 @@ TEXT: mod_gradebook_assignments|Assignments|Assignments
 TEXT: mod_gradebook_essays|Essays|Essays
 TEXT: mod_gradebook_test|MCQ Tests|MCQ Tests
 TEXT: mod_gradebook_worksheet|Online Worksheets|Online Worksheets
+TEXT: mod_gradebook_wordworksheet|Word Worksheets|Worksheets
 TEXT: mod_gradebook_yearMark|Mark(%)|Mark(%)
 TEXT: mod_gradebook_mark|Mark(%)|Mark(%)
 TEXT: mod_gradebook_markplain|Year Mark|Year Mark
@@ -87,6 +88,8 @@ TEXT: mod_gradebook_description|Description|Description
 TEXT: mod_gradebook_nocheckboxes_selected|You have not ticked any checkbox! <br />Click 'View All' then tick the box against the grades you wish to view,<br />Finally click 'Display Selected' button|You have not ticked any checkbox! <br />Click 'View All' then tick the box against the grades you wish to view,<br />Finally click 'Display Selected' button
 TEXT: mod_gradebook_noaccess|Student cannot access another student's records.|Student cannot access another student's records.
 TEXT: mod_gradebook_noassessment|No assessment has been selected.|No assessment has been selected.
+TEXT: mod_gradebook_viewOfflineAssignments|Phrase View Offline Assignments|View Offline Assignments
+TEXT: mod_gradebook_viewallassignmentsgrades|Phrase Detailed assignments grades|Detailed assignments grades
 
 COMMENT: Help Section
 TEXT: mod_gradebook_helpadmin|The help for topics in gradebook|Only one set of grades can be viewed at a time.
