[pwando] - Refactoring assignment wrt gradebook offline assignment uploads

--- a/assignment/register.conf
+++ b/assignment/register.conf
@@ -21,6 +21,7 @@ DEPENDS: groupadmin
 DEPENDS: context
 DEPENDS: dhtmlgoodies
 
+UPDATE_DESCRIPTION: [pwando] - Refactoring assignment wrt gradebook offline assignment uploads
 UPDATE_DESCRIPTION: Modification to functionality for downloading of all assignments as a ZIP file
 UPDATE_DESCRIPTION: Fixed downloading of all assignments as a ZIP file
 UPDATE_DESCRIPTION: Changed string prepended to submission file names in the zip archive for the downloading of assignments to username
