[pwando] - Refactoring worksheets wrt gradebook offline assignment uploads

--- a/worksheet/register.conf
+++ b/worksheet/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Online Worksheets
 MODULE_DESCRIPTION: A student can view and answer worksheets, which are questions that can be answered by typing into a single line or multiline text box.
 MODULE_AUTHORS: Tohir Solomons, Megan Watson, Abdurahim Shariff (Ported to Chisimba)
 MODULE_RELEASEDATE: 2005 01 10
-MODULE_VERSION: 1.323
+MODULE_VERSION: 1.324
 MODULE_PATH: worksheet
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -24,6 +24,7 @@ CONDITION: isContextStudent|isContextMember|Students
 
 RULE: selectforanswer|isContextStudent
 
+UPDATE_DESCRIPTION: [pwando] - Refactoring worksheets wrt gradebook offline assignment uploads
 
 TABLE: tbl_worksheet
 TABLE: tbl_worksheet_questions
