--- a/essay/register.conf
+++ b/essay/register.conf
@@ -13,8 +13,9 @@ DEPENDS_CONTEXT: 1
 ISCONTEXTPLUGIN: 1
 MODULE_CATEGORY: assessment
 MODULE_STATUS: stable
-MODULE_VERSION: 1.437
+MODULE_VERSION: 1.438
 
+UPDATE_DESCRIPTION: [pwando] - Refactoring essay wrt gradebook offline assignment uploads
 UPDATE_DESCRIPTION: moved scriptaculous to prototype module
 UPDATE_DESCRIPTION: Added language item
 UPDATE_DESCRIPTION: Changed language item
