[pwando] - Added required dependency - essayadmin

--- a/essay/register.conf
+++ b/essay/register.conf
@@ -30,6 +30,7 @@ PAGE: assessment_assessment
 
 DEPENDS: groupadmin
 DEPENDS: context
+DEPENDS: essayadmin
 
 COMMENT: USE_CONTEXT_GROUPS: Students
 COMMENT: CONDITION: isContextStudent|isContextMember|Students
